Add account payment form

--- a/src/app/dialog-modals/add-credit-card-dialog/add-credit-card-dialog.component.html
+++ b/src/app/dialog-modals/add-credit-card-dialog/add-credit-card-dialog.component.html
@@ -7,81 +7,7 @@
     <div>Make this my default card</div>
   </div>
 
-  <div class="body">
-
-    <div class="column">
-
-      <div class="column-title">Card Information</div>
-
-      <mat-form-field (keydown)="isAllowedNumericKey($event)" [class.error]="formInvalid && isCcNumberInvalid()" *ngIf="!creditCard.id">
-        <input type="text" matInput placeholder="Number" [(ngModel)]="creditCard.ccnumber">
-      </mat-form-field>
-
-      <mat-form-field (keydown)="isAllowedNumericKey($event)" [class.error]="formInvalid && isCvvInvalid()" *ngIf="!creditCard.id">
-        <input type="text" matInput placeholder="CVV" [(ngModel)]="creditCard.cvv">
-      </mat-form-field>
-
-      <mat-form-field [class.error]="formInvalid && !creditCard.name">
-        <input type="text" matInput placeholder="Name" [(ngModel)]="creditCard.name">
-      </mat-form-field>
-
-      <div class="row">
-        <mat-form-field [class.error]="formInvalid && isExpirationMonthInvalid()">
-          <input type="text" (keydown)="isAllowedNumericKey($event)" matInput [(ngModel)]="creditCard.expirationMonth" placeholder="Expiration Month">
-          <mat-hint>Format: MM</mat-hint>
-        </mat-form-field>
-
-        <mat-form-field [class.error]="formInvalid && isExpirationYearInvalid()">
-          <input type="text" (keydown)="isAllowedNumericKey($event)" matInput (keydown)="isAllowedNumericKey($event)" [(ngModel)]="creditCard.expirationYear" placeholder="Expiration Year">
-          <mat-hint>Format: YYYY</mat-hint>
-        </mat-form-field>
-      </div>
-
-    </div>
-
-    <div class="column">
-      <div class="column-title">Billing Address</div>
-
-      <mat-form-field [class.error]="formInvalid && (!creditCard.address.line1 || !isAddressValid(creditCard.address.line1))">
-        <input type="text" matInput placeholder="Address" [(ngModel)]="creditCard.address.line1">
-      </mat-form-field>
-
-      <mat-form-field>
-        <input type="text" matInput placeholder="Address 2" [(ngModel)]="creditCard.address.line2">
-      </mat-form-field>
-
-      <mat-form-field [class.error]="formInvalid && !isCityValid(creditCard.address.city)">
-        <input type="text" matInput placeholder="City" [(ngModel)]="creditCard.address.city">
-      </mat-form-field>
-
-      <div class="row">
-
-        <mat-form-field [class.error]="formInvalid && !isZipValid(creditCard.address.zip)">
-          <input type="text" (keydown)="isAllowedZipKey($event)" matInput [(ngModel)]="creditCard.address.zip" placeholder="Zip" name="zip">
-        </mat-form-field>
-
-        <mat-form-field [class.error]="formInvalid && !isStateValid(creditCard.address.state)">
-          <input type="text" matInput [(ngModel)]="creditCard.address.state" placeholder="State" name="state" [matAutocomplete]="statesAutocomplete">
-          <mat-autocomplete #statesAutocomplete="matAutocomplete">
-            <mat-option *ngFor="let state of states | filterStrings: creditCard.address.state: plainMapper" [value]="state">
-              <div>{{state}}</div>
-            </mat-option>
-          </mat-autocomplete>
-        </mat-form-field>
-
-      </div>
-
-      <mat-form-field [class.error]="formInvalid && !isCountryValid(creditCard.address.country)">
-        <input type="text" matInput [(ngModel)]="creditCard.address.country" placeholder="Country" name="country" [matAutocomplete]="countriesAutocomplete">
-        <mat-autocomplete #countriesAutocomplete="matAutocomplete">
-          <mat-option *ngFor="let country of countries | filterStrings: creditCard.address.country: plainMapper" [value]="country">
-            <div>{{country}}</div>
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-    </div>
-  </div>
+  <advanced-payment-form [creditCard]="creditCard"></advanced-payment-form>
 
   <div class="buttons">
     <button mat-button (click)="close()">CANCEL</button>
