Work on payment modal, add it to registration form

--- a/src/app/dialog-modals/payment-dialog/payment-dialog.component.scss
+++ b/src/app/dialog-modals/payment-dialog/payment-dialog.component.scss
@@ -2,6 +2,7 @@
 
 .container {
   display: flex;
+  max-width: 1160px;
 
   .row {
     display: flex;
@@ -10,6 +11,7 @@
 
   .payment-details {
     padding-top: 25px;
+    width: 65%;
 
     .heading {
       margin-left: 25px;
@@ -53,7 +55,7 @@
     flex-direction: column;
     padding: 25px;
     background: rgba(44, 152, 240, 0.1);
-    max-width: 360px;
+    width: 35%;
 
     .heading {
       line-height: 24px;
