--- a/src/app/shared/components/advanced-payment-form/advanced-payment-form.component.scss
+++ b/src/app/shared/components/advanced-payment-form/advanced-payment-form.component.scss
@@ -4,7 +4,7 @@
   width: calc(50% - 18px);
 
   .column-title {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: 18px;
     font-weight: 500;
   }
@@ -20,9 +20,14 @@
 
 .advanced-payment-body {
   width: 100%;
-  padding: 35px 25px;
-  display: flex;
+  padding: 25px;
   box-sizing: border-box;
+  font-size: 16px;
+}
+
+.columns {
+  display: flex;
+  width: 100%;
 }
 
 mat-form-field {
@@ -52,13 +57,14 @@ mat-form-field {
 
   img {
     margin-left: auto;
+    margin-right: 15px;
   }
 }
 
 .dates {
   display: flex;
   justify-content: space-between;
-  margin-top: 14.5px;
+  margin-top: 20px;
   margin-bottom: 30px;
 
   .error {
@@ -82,6 +88,7 @@ mat-form-field {
 
     mat-icon {
       margin-left: auto;
+      color: rgba(0, 0, 0, 0.54);
     }
   }
 
@@ -91,5 +98,16 @@ mat-form-field {
 
   .selected {
     color: rgba(0, 0, 0, 0.87);
+  }
+}
+
+.cards {
+  display: flex;
+  margin-bottom: 30px;
+
+  img {
+    width: 52px;
+    height: 34px;
+    margin-right: 20px;
   }
 }
