Hide pay button

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -57,12 +57,13 @@
           <td>{{getCardNumber(rebill)}}</td>
           <td>{{rebill.productSchedules[0].name}}</td>
           <td class="number-cell">{{getPlanPrice(rebill).usd()}}</td>
-          <td class="number-cell button-cell">
-            <ng-container *ngIf="isPaid(rebill); else paybutton">{{rebill.amount.usd()}}</ng-container>
-            <ng-template #paybutton>
-              <button class="paybutton" mat-button (click)="payRebill(rebill)">PAY {{rebill.amount.usd()}}</button>
-            </ng-template>
-          </td>
+          <td class="number-cell">{{rebill.amount.usd()}}</td>
+          <!--<td class="number-cell button-cell">-->
+            <!--<ng-container *ngIf="isPaid(rebill); else paybutton">{{rebill.amount.usd()}}</ng-container>-->
+            <!--<ng-template #paybutton>-->
+              <!--<button class="paybutton" mat-button (click)="payRebill(rebill)">PAY {{rebill.amount.usd()}}</button>-->
+            <!--</ng-template>-->
+          <!--</td>-->
         </tr>
       </ng-container>
     </tbody>
