--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -370,8 +370,8 @@
                 </div>
               </mat-expansion-panel-header>
 
-              <div class="expansion-body">
-                <payment-form #paymentForm [creditCard]="newCreditCard" [defaultAddress]="selectedShippingAddress"></payment-form>
+              <div class="expansion-body expansion-body--no-margin">
+                <advanced-payment-form [creditCard]="newCreditCard" [defaultAddress]="selectedShippingAddress"></advanced-payment-form>
               </div>
 
               <div class="buttons">
