--- a/src/app/shared/components/advanced-payment-form/advanced-payment-form.component.scss
+++ b/src/app/shared/components/advanced-payment-form/advanced-payment-form.component.scss
@@ -4,6 +4,8 @@
   width: calc(50% - 18px);
 
   .column-title {
+    display: flex;
+    align-items: center;
     margin-bottom: 25px;
     font-size: 18px;
     font-weight: 500;
@@ -110,4 +112,10 @@ mat-form-field {
     height: 34px;
     margin-right: 20px;
   }
+}
+
+.same-checkbox {
+  font-size: 12px;
+  margin-left: auto;
+  font-weight: 400;
 }
