Remove old payment form component

--- a/src/app/dialog-modals/add-credit-card-dialog/add-credit-card-dialog.component.html
+++ b/src/app/dialog-modals/add-credit-card-dialog/add-credit-card-dialog.component.html
@@ -7,7 +7,7 @@
     <div>Make this my default card</div>
   </div>
 
-  <advanced-payment-form [creditCard]="creditCard"></advanced-payment-form>
+  <payment-form [creditCard]="creditCard"></payment-form>
 
   <div class="buttons">
     <button mat-button (click)="close()">CANCEL</button>
