--- a/src/app/dialog-modals/payment-dialog/payment-dialog.component.html
+++ b/src/app/dialog-modals/payment-dialog/payment-dialog.component.html
@@ -26,7 +26,7 @@
       <img src="/assets/cards/discover.svg">
     </div>
 
-    <advanced-payment-form [creditCard]="creditCard" [showSensitiveData]="true"></advanced-payment-form>
+    <payment-form [creditCard]="creditCard" [showSensitiveData]="true"></payment-form>
   </div>
 
   <div class="rebill-details" *ngIf="rebill">
