--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -371,7 +371,7 @@
               </mat-expansion-panel-header>
 
               <div class="expansion-body expansion-body--no-margin">
-                <advanced-payment-form [creditCard]="newCreditCard" [defaultAddress]="selectedShippingAddress"></advanced-payment-form>
+                <payment-form [creditCard]="newCreditCard" [defaultAddress]="selectedShippingAddress"></payment-form>
               </div>
 
               <div class="buttons">
