--- a/src/app/payment/plan-billing/plan-billing.component.html
+++ b/src/app/payment/plan-billing/plan-billing.component.html
@@ -2,7 +2,7 @@
 
   <div class="title">Billing Information</div>
 
-  <advanced-payment-form [creditCard]="creditCard"></advanced-payment-form>
+  <payment-form [creditCard]="creditCard"></payment-form>
 
   <div class="buttons">
     <button mat-button (click)="changePlan.emit(true)">BACK</button>
