--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -200,6 +200,7 @@
     }
 
     td {
+      position: relative;
       font-size: 13px;
       padding: 10px;
       line-height: 27px;
@@ -295,6 +296,30 @@ a {
 
 .table-content {
   vertical-align: middle;
+}
+
+.tooltip {
+  position: absolute;
+  display: none;
+  padding: 2px 6px;
+  right: 0;
+  top: 10px;
+  background: white;
+  border: 1px solid rgba(0,0,0,0.6);
+  z-index: 10;
+}
+
+.mask-data {
+  max-width: 180px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  &:hover {
+    .tooltip {
+      display: block;
+    }
+  }
 }
 
 .counter {
