--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -47,7 +47,7 @@
 
               <div class="options">
                 <span>{{'SEARCH_SORT_TITLE' | translate}}:</span>
-                <span>{{sortBy}}</span>
+                <span class="sort-value">{{sortBy || 'default'}}</span>
                 <button mat-icon-button [matMenuTriggerFor]="sortByMenu">
                   <mat-icon>arrow_drop_down</mat-icon>
                 </button>
@@ -55,9 +55,9 @@
                 <mat-menu #sortByMenu="matMenu">
                   <button mat-menu-item (click)="setSortBy('created_at asc')">{{'SEARCH_SORT_CREATEASC' | translate}}</button>
                   <button mat-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_CREATEDESC' | translate}}</button>
-                  <button mat-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_UPDATEASC' | translate}}</button>
-                  <button mat-menu-item (click)="setSortBy('created_at desc')">{{'SEARCH_SORT_UPDATEDESC' | translate}}</button>
-                  <button mat-menu-item (click)="setSortBy('def')">{{'SEARCH_SORT_DEF' | translate}}</button>
+                  <button mat-menu-item (click)="setSortBy('updated_at asc')">{{'SEARCH_SORT_UPDATEASC' | translate}}</button>
+                  <button mat-menu-item (click)="setSortBy('updated_at desc')">{{'SEARCH_SORT_UPDATEDESC' | translate}}</button>
+                  <button mat-menu-item (click)="setSortBy('default')">{{'SEARCH_SORT_DEF' | translate}}</button>
                 </mat-menu>
 
                 <share-link [shareUrl]="getShareUrl()"></share-link>
